# mcp-server-mapi

./: .dockerignore  Dockerfile  LICENSE  README.md  claude_desktop_config.json  pyproject.toml
.github/workflows/: publish.yml
src/mcp_server_mapi/: __init__.py  __main__.py  cli_runner.py  server.py
