[project]
name = "mcp-server-mapi"
version = "0.2.3"
description = "A Model Context Protocol server providing tools to execute mapi"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.6.0",
    "pydantic>=2.11.3",
    "typer>=0.17.4",
]

[project.scripts]
mcp-server-mapi = "mcp_server_mapi.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
